The timeline tab is no longer conditional on the "timeline" url parameter. UI Settings now supports threeState button inputs. "Skip dead-air" setting is now a threeState button, and now exists in the new "Timeline" section of UI Settings. Added "Timeline Boring Mode" setting to disable rendering the starfield background in out-of-bounds areas and when zoomed far out. Deleted leftover rounded rectangle drawing code that was too slow. The timeline will now cease playback and return to live view if a timeline frame is rendered during or after the keep-out time. Fixed edge case when beginning timeline playback in the jpeg player, sometimes the timeline's selected timestamp would jump around between the previous and new positions. Labels are now optional for UIFormField with inputType "button" or "threeState".

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -13,7 +13,7 @@
 	--text-active-color: #FFFFFF;
 	--pctext-color: #E8E8E8;
 	--pctext-hover-color: #FFFFFF;
-	--audio-playing-color: #63C35B;
+	.ui --audio-playing-color: #63C35B;
 	--audio-loading-color: #F0F000;
 	--audio-error-color: #F00000;
 	--audio-idle-color: var(--button-color);
@@ -472,13 +472,12 @@ body, #layouttop, #layoutleft, #layoutbody, #layoutbottom, .unselectable
 	font-size: 14px;
 }
 
-#topbar_tab_timeline /* TIMELINE_READY */
+#topbar_tab_timeline
 {
-	opacity: 0;
 	position: relative;
 }
 
-@media (min-width: 850px) /* TIMELINE_READY */
+@media (min-width: 850px) /* TIMELINE-RELEASE */
 {
 	#topbar_tab_timeline::before
 	{
@@ -3533,6 +3532,7 @@ body + div
 
 .playbackSettingsLine
 {
+	display: block;
 	cursor: pointer;
 	padding: 10px;
 }
@@ -3602,6 +3602,17 @@ body + div
 	line-height: 18.4px;
 	margin-left: 10px;
 }
+
+	.playbackSettingsFloatRight .dialogOption_item_btn
+	{
+		padding: 0px;
+		margin: -3px 0px 0px 10px;
+	}
+
+		.playbackSettingsFloatRight .dialogOption_item_btn input[type="button"]
+		{
+			margin: 0px;
+		}
 
 .playbackSettingsRightArrow
 {
